[workspace]
resolver = "3"

members = [
    "shared",
    "api_gateway",
    "analytics_service",
    "click_tracker",
    "redirect_service",
    "shortner_service"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12.3"
prost = "0.13.5"

