[workspace]
resolver = "3"

members = [
    "api_gateway",
    "analytics_service",
    "click_tracker",
    "redirect_service",
    "shortener_service",
    "migration",
    "entity"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12.3"
prost = "0.13.5"
anyhow = "1.0.97"
