[workspace]
resolver = "3"

members = [
    "api_gateway",
    "analytics_service",
    "redirect_service",
    "shortener_service",
    "migration",
    "entity",
    "shared"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.12.3"
prost = "0.13.5"
anyhow = "1.0.97"
thiserror = "2.0.12"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
axum = "0.8"
redis = { version = "0.29.1", features = ["tokio-comp"] }
