[package]
name = "api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tonic = { workspace = true }
prost = { workspace = true }
tower-http = { version = "0.6.2", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic-build = "0.12.3"
anyhow = { workspace = true }



[build-dependencies]
tonic-build = "0.12.3"
