[package]
name = "shortener_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tonic-build = "0.12.3"
sea-orm = { workspace = true }
entity = { path = "../entity" }
shared = { path = "../shared" }
rand = "0.9.0"

[build-dependencies]
tonic-build = "0.12.3"
