[package]
name = "shortner_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic-build = "0.12.3"


[build-dependencies]
tonic-build = "0.12.3"
