[package]
name = "shortner_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tonic-build = "0.12.3"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }


[build-dependencies]
tonic-build = "0.12.3"
